replace color with variable

--- a/src/components/BreadCrumb/BreadCrumb.scss
+++ b/src/components/BreadCrumb/BreadCrumb.scss
@@ -6,7 +6,7 @@
 
   &+.breadcrumb-item::before{
     padding: 8px;
-    color: black;
+    color: $black;
     content: "/\00a0";
   }
 
@@ -15,7 +15,7 @@
     text-decoration: none;
 
     &:hover{
-        color: #01447e;
+        color: $breadcrumb-hover;
         text-decoration: underline;
     }
     
