--- a/src/components/Folder/Folder.scss
+++ b/src/components/Folder/Folder.scss
@@ -6,12 +6,12 @@
     height: 25px;
     vertical-align: top;
     border-radius: 5px;
-    border: 1px solid #cccccc;
+    border: 1px solid $border-color;
     padding: 10px;
     margin: 0.5% 0.5%;
     cursor: pointer;
     &:hover{
-        box-shadow: 1px 4px 5px 1px rgba(0, 0, 0, 0.1);
+        box-shadow: 1px 4px 5px 1px $box-shadow-color5;
     }
 }
 
