--- a/src/utilities/shared/scss/variable.scss
+++ b/src/utilities/shared/scss/variable.scss
@@ -1,7 +1,16 @@
 $head-color:#3E51B5;
+$breadcrumb-hover:#01447e;
 $border-color: #cccccc;
+$black: #000000;
 $white: #ffffff;
+$button-default-text:#737373;
+$button-active: #e5e5e5;
+$card-default-text:#8F8F8F;
 
 $box-shadow-color1: #00000033;
 $box-shadow-color2: #00000024;
 $box-shadow-color3: #0000001f;
+$box-shadow-color4: #0000000d;
+$box-shadow-color5: #0000001a;
+$box-shadow-color6: #00000030;
+$box-shadow-color7: #00000066;
