--- a/src/components/File/File.scss
+++ b/src/components/File/File.scss
@@ -4,20 +4,20 @@
     width: 200px;
     display: inline-block;
     vertical-align: top;
-    background-color: white;
+    background-color: $white;
     margin: 0.5% 0.5%;
     border-radius: 5px;
     overflow: hidden;
-    border: 1px solid #cccccc;
+    border: 1px solid $border-color;
     padding: 10px;
     cursor: pointer;
     &:hover{
-        box-shadow: 1px 4px 5px 1px rgba(0, 0, 0, 0.1);
+        box-shadow: 1px 4px 5px 1px $box-shadow-color5;
     }
     .image-container{
         height: 200px;
         overflow: hidden;
-        border: 1px solid #ccc;
+        border: 1px solid $border-color;
         text-align: center;    
     }
     .data-container{
