--- a/src/components/Modal/Modal.scss
+++ b/src/components/Modal/Modal.scss
@@ -10,17 +10,17 @@
     width: 100%; /* Full width */
     height: 100%; /* Full height */
     overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    background-color: $black; /* Fallback color */
+    background-color: $box-shadow-color7; /* Black w/ opacity */
     /* Modal Content */
     .modal-content {
         position: relative;
-        background-color: #fefefe;
+        background-color: $white;
         margin: auto;
         padding: 0;
-        border: 1px solid #888;
+        border: 1px solid $border-color;
         width: 40%;
-        box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
+        box-shadow: 0 4px 8px 0 $box-shadow-color1,0 6px 20px 0 $box-shadow-color6;
         -webkit-animation-name: animatetop;
         -webkit-animation-duration: 0.4s;
         animation-name: animatetop;
@@ -37,7 +37,7 @@
                 width: 97%;
                 height: 20px;
                 border-radius: 5px;
-                border: 1px solid #ccc;
+                border: 1px solid $border-color;
                 font-size: 16px;
                 padding: 5px;
             }
