--- a/src/pages/Main/Main.scss
+++ b/src/pages/Main/Main.scss
@@ -30,7 +30,7 @@
             text-align: right;
             padding: 0px 20px 0px 0px;
             .google-button {
-                border: 2px solid #8e8e8e;
+                border: 2px solid $border-color;
                 margin-left: 10px;
             }
         }
